# integration-test-rs

./: Cargo.toml
src/: main.rs
src/lib/: handlers.rs  http_server.rs  lib.rs  system.rs
src/lib/handlers/: responses.rs  user_handler.rs
src/lib/handlers/request/: create_user_request.rs
src/lib/handlers/requests/: create_user_request.rs
src/lib/handlers/response/: create_user_response.rs
src/lib/handlers/responses/: create_user_response.rs
src/lib/repositories/: user_repository.rs
src/lib/services/: user_service.rs
src/lib/shared/: macros.rs
src/lib/system/: database_config.rs  http_server.rs  server_config.rs
tests/integration/: containers.rs  mod.rs  user_controller.rs  user_handler.rs
tests/unitary/services/: user_service.rs
