[package]
name = "integration-test-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[[test]]
name = "unitary_tests"
path = "tests/unitary/mod.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["json-deserializer"] }
tokio = { version = "1.38.0", features = ["full", "test-util"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json"] }
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.120"

[dev-dependencies]
mockall = "0.12.1"
testcontainers = "0.15.0"
ctor = "0.2.8"